Add bob to about us (#897)
* added text

* add photo

* add to yml

* commit

* add yml

* run bin/rake prepare_translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1830,6 +1830,11 @@ en:
       about_bike_index: About Bike Index
       alumni: Alumni
       bike_registration_that_works: Bike registration that works.
+      bobby_gervais_bio_html: |
+        <strong>Bobby Gervais</strong> has had a long history of delivering and
+        carrying stuff on his bike for work and now he's making a living out of helping
+        people recover their bikes. Bobby helps to maintain the Bike Index, and work
+        on new features.
       bryan_hance_bio_html: |
         <strong>Bryan Hance</strong> created StolenBicycleRegistry.com in 2004
         because 5 of his bikes were stolen in 9 years&mdash;and realized
