--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -906,7 +906,7 @@ en:
     bike:
       location: Location
       primary_colors: Primary colors
-      recovered: Recovered
+      abandoned: Abandoned
       serial: Serial
       stolen: Stolen
     bike_fields:
@@ -1679,7 +1679,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -1705,7 +1705,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
