--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,6 +96,7 @@ en:
         origin: Origin
         params: Params
       bike:
+        abandoned: Abandoned
         additional_registration: Additional registration
         all_description: All description
         approved_stolen: Approved stolen
@@ -151,7 +152,6 @@ en:
         rear_gear_type: :activerecord.models.rear_gear_type
         rear_tire_narrow: Rear tire narrow
         rear_wheel_size: :activerecord.models.rear_wheel_size
-        recovered: Recovered
         recovered_records: Recovered records
         registered_new: Registered new
         secondary_frame_color: :activerecord.models.secondary_frame_color
