--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -31,7 +31,7 @@ nl:
     - vr
     - za
     month_names:
-    - 
+    -
     - januari
     - februari
     - maart
@@ -45,7 +45,7 @@ nl:
     - november
     - december
     abbr_month_names:
-    - 
+    -
     - jan
     - feb
     - mrt
@@ -2047,7 +2047,7 @@ nl:
       spread_the_word: Vertel het verder!
       stock_photo: Stock foto van een %{year} %{model}
       stolen: Gestolen
-      theft_details: "%{bike_recovered} Details"
+      theft_details: "%{bike_abandoned} Details"
       view_users_other_registrations: Bekijk andere registraties van gebruiker
       wheel_diameter: Wiel diameter
       where_did_you_see_this_bike: Waar heb je dit gezien %{bike_type}? Als u contact
@@ -3209,115 +3209,115 @@ nl:
         zodat de klant te allen tijde toegang heeft tot deze informatie. Maak je geen
         zorgen:  <a target="none" href="%{privacy_path}">we zullen deze informatie
         nooit vrijgeven</a>.'
-      we_have_a_new_free_bicycle_registration: 
+      we_have_a_new_free_bicycle_registration:
     bike_shop_packages:
       additional: Extra
-      bike_index_for_bike_shops: 
-      choose_a_package_size: 
-      compare_plans_and_features: 
+      bike_index_for_bike_shops:
+      choose_a_package_size:
+      compare_plans_and_features:
       contact_us: Contacteer ons
-      contact_us_for_trial: 
+      contact_us_for_trial:
       forever: Voor altijd
       free: GRATIS
-      package_title: 
-      questions_want_to_get_started: 
+      package_title:
+      questions_want_to_get_started:
       sign_up: Registreren
       sign_up_now: Meld je nu aan
-      simply_the_best_bike_registry: 
-      supporting_shop: 
+      simply_the_best_bike_registry:
+      supporting_shop:
       try_for_free: Probeer gratis
       year: jaar
     campus_packages:
       additional: Extra
-      all_plans_come_with_a_30day_free_trial: 
-      bike_index_for_colleges_universities: 
-      choose_a_package_size: 
-      clean_up_your_campus_messy_registry: 
-      compare_plans_and_features: 
+      all_plans_come_with_a_30day_free_trial:
+      bike_index_for_colleges_universities:
+      choose_a_package_size:
+      clean_up_your_campus_messy_registry:
+      compare_plans_and_features:
       contact_us: Contacteer ons
-      contact_us_for_trial: 
+      contact_us_for_trial:
       forever: Voor altijd
       free: GRATIS
-      keep_us_pedaling: 
-      number_of_members: 
-      package_title: 
-      questions_want_to_get_started: 
+      keep_us_pedaling:
+      number_of_members:
+      package_title:
+      questions_want_to_get_started:
       sign_up: Registreren
       sign_up_now: Meld je nu aan
       try_for_free: Probeer gratis
       year: jaar
     cities_packages:
       additional: Extra
-      all_plans_come_with_a_30day_free_trial: 
-      bike_index_for_cities: 
-      choose_a_package_size: 
-      compare_plans_and_features: 
+      all_plans_come_with_a_30day_free_trial:
+      bike_index_for_cities:
+      choose_a_package_size:
+      compare_plans_and_features:
       contact_us: Contacteer ons
-      contact_us_for_trial: 
+      contact_us_for_trial:
       forever: Voor altijd
       free: GRATIS
-      give_your_constituents_the_bike_registry_: 
-      keep_us_pedaling: 
-      metropolis: 
-      package_title: 
-      questions_want_to_get_started: 
+      give_your_constituents_the_bike_registry_:
+      keep_us_pedaling:
+      metropolis:
+      package_title:
+      questions_want_to_get_started:
       sign_up: Registreren
       sign_up_now: Meld je nu aan
-      small_city: 
-      town: 
+      small_city:
+      town:
       try_for_free: Probeer gratis
       year: jaar
     find_out_more:
-      custom_development_available: 
-      find_out_more_html: 
+      custom_development_available:
+      find_out_more_html:
       get_in_touch_link: Neem contact op
     for_bike_shops:
-      5_ways_to_grow_community_for_your_bike_sh: 
-      ascend_retail: 
-      bike_index_for_bike_shops: 
-      bikes_before_they: 
-      build_goodwill_with_your_customers_with_a: 
-      connect_your_ascend_account_html: 
-      connect_your_lightspeed_account: 
-      do_right_by_your_customers: 
-      dont_use_ascend_or_lightspeed_html: 
-      driving_service_revenues_with_bicycle_reg: 
-      features_and_pricing: 
-      for_completely_free_we_provide_you_with_t: 
+      5_ways_to_grow_community_for_your_bike_sh:
+      ascend_retail:
+      bike_index_for_bike_shops:
+      bikes_before_they:
+      build_goodwill_with_your_customers_with_a:
+      connect_your_ascend_account_html:
+      connect_your_lightspeed_account:
+      do_right_by_your_customers:
+      dont_use_ascend_or_lightspeed_html:
+      driving_service_revenues_with_bicycle_reg:
+      features_and_pricing:
+      for_completely_free_we_provide_you_with_t:
       here: hier
-      join_our_network_link_html: 
+      join_our_network_link_html:
       learn_more: Leer meer
-      network_of_shop_partners: 
-      once_you_do_this_link_your_account_to_you: 
+      network_of_shop_partners:
+      once_you_do_this_link_your_account_to_you:
       or: of
-      our_official_lightspeed_integration_provi: 
-      printed_materials: 
-      register_bikes_for_your_customers: 
-      related_articles: 
-      sign_up_for_a_free_bike_index_account_html: 
-      trusted_by_bike_shops_everywhere: 
-      use_lightspeed_retail: 
-      used_at_bike_shops_everywhere: 
+      our_official_lightspeed_integration_provi:
+      printed_materials:
+      register_bikes_for_your_customers:
+      related_articles:
+      sign_up_for_a_free_bike_index_account_html:
+      trusted_by_bike_shops_everywhere:
+      use_lightspeed_retail:
+      used_at_bike_shops_everywhere:
     for_cities:
-      actually_get_people_registered_and_do_it_: 
-      bike_index_for_cities: 
-      bike_index_is_the_community_registration_: 
-      bike_index_unveils_partnership_with_the_c: 
-      bring_together_bike_shops_schools_municip: 
-      engage_your_residents_and_recover_their_b: 
-      features_amp_pricing: 
-      mitigate_the_registration_mess: 
-      no_more_index_cards_or_excel_sheets_give_: 
-      our_community_is_your_community: 
-      plug_your_city_in_nationally: 
-      related_articles: 
-      trusted_by_law_enforcement_everywhere: 
-      trusted_by_municipalities_everywhere: 
+      actually_get_people_registered_and_do_it_:
+      bike_index_for_cities:
+      bike_index_is_the_community_registration_:
+      bike_index_unveils_partnership_with_the_c:
+      bring_together_bike_shops_schools_municip:
+      engage_your_residents_and_recover_their_b:
+      features_amp_pricing:
+      mitigate_the_registration_mess:
+      no_more_index_cards_or_excel_sheets_give_:
+      our_community_is_your_community:
+      plug_your_city_in_nationally:
+      related_articles:
+      trusted_by_law_enforcement_everywhere:
+      trusted_by_municipalities_everywhere:
     for_community_groups:
-      bike_index_for_community_groups: 
-      bike_index_launches_new_ambassadors_progr: 
-      bike_index_welcomes_stolen_bikes_nola: 
-      gone_are_the_days_where_you_had_to_regist: 
+      bike_index_for_community_groups:
+      bike_index_launches_new_ambassadors_progr:
+      bike_index_welcomes_stolen_bikes_nola:
+      gone_are_the_days_where_you_had_to_regist:
       help_us_help_you: Help ons u te helpen
       here: hier
       partners_made_in_heaven: Partners gemaakt in de hemel
@@ -3325,7 +3325,7 @@ nl:
       registrations_are_free_forever_join_bike_: Inschrijvingen zijn gratis. Voor
         altijd. Word lid van Bike Index en begin vandaag nog met registreren.
       related_articles: 'Gerelateerde artikelen:'
-      sign_up_for_free: 
+      sign_up_for_free:
       spread_the_bike_index_word_html: Verspreid het Bike Index-woord naar uw kiezers
         om ze beschermd te rijden. Maak een gratis organisatieaccount %{link}.
       the_most_widereaching_and_effective_tools: De meest uitgebreide en effectieve
@@ -3339,11 +3339,11 @@ nl:
         fietser, we willen alle fietsen laten rijden met de eigenaren die ze nodig
         hebben.
     for_law_enforcement:
-      automated_tweets: 
+      automated_tweets:
       bend_reduces_bike_theft_by_60_percent: Bocht vermindert fietsdiefstal met 60
         procent
       bike_index_for_law_enforcement: Fietsindex voor wetshandhaving
-      bike_indexs_newest_municipal_partner: 
+      bike_indexs_newest_municipal_partner:
       here: hier
       if_you_want_to_collaborate_html: Als je wilt samenwerken met andere afdelingen
         in je stad om een register te beheren, lees je meer over Bike Index voor gemeenten
