--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4203,7 +4203,7 @@ en:
       add_some_info: Add some info
       bikes: bikes
       combination: Combination
-      date_recovered: Date recovered
+      date_abandoned: Date abandoned
       date_stolen: Date stolen
       edit: Edit
       edit_bike: Edit Bike
