--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2997,7 +2997,7 @@ en:
       try_for_free: Try For Free
       year: year
   layouts:
-    application_revised:
+    application:
       about: About
       add_a_bike: Add a bike
       blog: Blog
@@ -3028,7 +3028,7 @@ en:
       users: Users
       view_org: View %{org_name}
       your_bikes: Your bikes
-    application_revised_bikehub:
+    application_bikehub:
       bike_security: At BikeHub, we believe bike security is more than just a strong
         U-lock.
       bikehub_login: BikeHub Login
