--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1525,6 +1525,47 @@ en:
         whoops_it_appears_you_have_forgotten_your: >-
           Whoops! It appears you have forgotten your Bike Index password! Please click
           the link below (or paste it into your browser) to create a new password.
+    promoted_alert_email:
+      html:
+        additional_info: >-
+          If you have any additional information to add or need to extend the alert,
+          please return to your Bike Index account.
+        regards: Regards,
+        safe_return: >-
+          Everyone in the Bike Index community is pulling for the safe return of you
+          bike. If it recovered, please do let us know via your account and consider
+          a tax deductible donation so we can expand our efforts on behalf of the
+          cycling community.
+        sorry_to_hear_about_your_bike: >-
+          Sorry to hear about your <bike brand>. We've started to share the word on
+          Facebook, Twitter and Instagram about your stolen bike. We encourage you
+          to continue to share aggressively on your social media channels. Be sure
+          to look out for local stolen bike user groups on Facebook as another place
+          to connect with supporters.
+        team: Team Bike Index
+        your_promoted_alert: >-
+          Your promoted alert has begun showing to cycling enthusiasts in <city>.
+          You can share using your bike URL <bikeindex bike url>.
+      text:
+        additional_info: >-
+          If you have any additional information to add or need to extend the alert,
+          please return to your Bike Index account.
+        regards: Regards,
+        safe_return: >-
+          Everyone in the Bike Index community is pulling for the safe return of you
+          bike. If it recovered, please do let us know via your account and consider
+          a tax deductible donation so we can expand our efforts on behalf of the
+          cycling community.
+        sorry_to_hear_about_your_bike: >-
+          Sorry to hear about your <bike brand>. We've started to share the word on
+          Facebook, Twitter and Instagram about your stolen bike. We encourage you
+          to continue to share aggressively on your social media channels. Be sure
+          to look out for local stolen bike user groups on Facebook as another place
+          to connect with supporters.
+        team: Team Bike Index
+        your_promoted_alert: >-
+          Your promoted alert has begun showing to cycling enthusiasts in <city>.
+          You can share using your bike URL <bikeindex bike url>.
     recovered_from_link:
       html:
         marked_recovered_by: 'Marked recovered by:'
